baml_language/crates/baml_tests/snapshots/catch_all_keyword/baml_tests__catch_all_keyword__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.CatchAllTyped(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch_all (let e) { _: string => "caught string", _: int => "caught int" }
}
function user.CatchAllWildcard(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch_all (let e) { _ => "caught all" }
}
function user.CatchThenCatchAll(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (let e) { _: string => "caught string" } catch_all (let e2) { _ => "caught rest" }
}
function user.MayFailIntOrString(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw "string error", 1 => throw 42, _ => "ok" }
}
function user.PartialCatch(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (let e) { _: string => "caught string" }
}
