baml_language/crates/baml_tests/snapshots/catch_all_keyword/baml_tests__catch_all_keyword__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn MayFailIntOrString(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb5, 1: bb4, otherwise: bb1];
    }

    bb1: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        throw const 42_i64;
    }

    bb5: {
        throw const "string error";
    }
}

fn CatchAllWildcard(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        _0 = const "caught all";
        goto -> bb4;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn CatchAllTyped(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr(None) });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "caught int";
        goto -> bb7;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb7;
    }

    bb6: {
        goto -> bb7;
    }

    bb7: {
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn PartialCatch(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _2;
    }

    bb3: {
        _0 = const "caught string";
        goto -> bb5;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn CatchThenCatchAll(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb5, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb4, bb2];
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        _0 = const "caught rest";
        goto -> bb6;
    }

    bb4: {
        _0 = const "caught string";
        goto -> bb6;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        goto -> bb7;
    }

    bb7: {
        return;
    }
}
