baml_language/crates/baml_tests/snapshots/catch_all_keyword/baml_tests__catch_all_keyword__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TYPE INFERENCE ===
  Function CatchAllTyped:
    Return: Union([String, Literal(String("caught string")), Literal(String("caught int"))])
  Function MayFailIntOrString:
    Return: Literal(String("ok"))
  Function CatchThenCatchAll:
    Return: Union([String, Literal(String("caught string")), Literal(String("caught rest"))])
  Function PartialCatch:
    Return: Union([String, Literal(String("caught string"))])
  Function CatchAllWildcard:
    Return: Union([String, Literal(String("caught all"))])
