baml_language/crates/baml_tests/snapshots/catch_all_keyword/baml_tests__catch_all_keyword__04_tir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.MayFailIntOrString(x: int) -> string {
  { : "ok"
    match (x : int) : "ok"
      0 =>
        throw "string error" : never
      1 =>
        throw 42 : never
      _ =>
        "ok" : "ok"
  }
}
function user.PartialCatch(x: int) -> string {
  { : string | "caught string"
    catch (MayFailIntOrString(x) : string) : string | "caught string"
      catch (e)
        _: string =>
          "caught string" : "caught string"
  }
}
function user.CatchAllWildcard(x: int) -> string {
  { : string | "caught all"
    catch (MayFailIntOrString(x) : string) : string | "caught all"
      catch_all (e)
        _ =>
          "caught all" : "caught all"
  }
}
function user.CatchAllTyped(x: int) -> string {
  { : string | "caught string" | "caught int"
    catch (MayFailIntOrString(x) : string) : string | "caught string" | "caught int"
      catch_all (e)
        _: string =>
          "caught string" : "caught string"
        _: int =>
          "caught int" : "caught int"
  }
}
function user.CatchThenCatchAll(x: int) -> string {
  { : string | "caught string" | "caught rest"
    catch (MayFailIntOrString(x) : string) : string | "caught string" | "caught rest"
      catch (e)
        _: string =>
          "caught string" : "caught string"
      catch_all (e2)
        _ =>
          "caught rest" : "caught rest"
  }
}
